EDUCATOR: add mock server functionality
see NOTES FROM EDUCATOR in README

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </head>
     <body>
         <a href="F&B.html" id="dataLink"> go to the data</a>
-        <form action="http://192.168.16.87:8080/sajidah/" method="post" enctype="multipart/form-data">
+        <form action="pseudoserver/" method="post" enctype="multipart/form-data">
             <label for="nameOfRecipe">What type of name do you wanna name your recipe?</label>
             <input type="text" id="nameOfRecipe" name="nameOfRecipe"><br><br>
 
@@ -150,5 +150,7 @@
                 
             <button>Save</button>
         </form>
+
+        <script src="register-service-worker.js"></script>
     </body>
 </html>
